chore: removes unnecessary unboxing to clean code (#353)
Fixes [ARQ-2214](https://issues.redhat.com/browse/ARQ-2214)